# toolkit

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  lerna.json  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  tool_request.md
.github/workflows/: build.yml  ci.yml  fuzz.yml  pages.yml  release.yml  verify-release.yml
Formula/: toolkit.rb
bucket/: toolkit.json
chains/: api-key-gen.json  base64-json-pretty.json  csv-preview.json  extract-emails.json  extract-urls.json  file-checksum.json  integrity-check.json  jwt-claims.json  packed-json-inspect.json  photo-privacy-report.json  photo-share-safe.json  qr-link-inspect.json  saml-inspect.json  text-compare.json  totp-secret.json  url-inspect.json  yaml-preview.json
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: differential_tests.rs  main.rs  manifests_cmd.rs  mcp.rs
crates/core/: Cargo.toml
crates/core/src/: abi.rs  chain.rs  data.rs  exercise.rs  lib.rs  manifest.rs  options.rs  stream.rs  tool.rs
crates/packs/: clippy.toml
crates/packs/crypto/: Cargo.toml
crates/packs/crypto/src/: base32_tools.rs  base58_tools.rs  cert.rs  generators.rs  hmac_tool.rs  jwt_verify.rs  lib.rs  totp.rs  uuid_inspect.rs
crates/packs/crypto/tests/: exercise.rs
crates/packs/data/: Cargo.toml
crates/packs/data/src/: calc.rs  cidr.rs  color.rs  contrast.rs  cron.rs  csv_stats.rs  csv_tools.rs  duration.rs  filetype.rs  grep.rs  http_status.rs  json_diff.rs  json_query.rs  json_schema_infer.rs  lib.rs  markdown.rs  regex_tool.rs  semver_check.rs  sql_format.rs  text_replace.rs  timestamp.rs  toml_tools.rs  units.rs  url_tool.rs  xml.rs  yaml.rs
crates/packs/data/tests/: exercise.rs  jsonpath_cts.rs
crates/packs/image/: Cargo.toml
crates/packs/image/src/: clean.rs  codec.rs  compress.rs  convert.rs  crop.rs  exif_view.rs  lib.rs  merge.rs  qr.rs  resize.rs  rotate.rs
crates/packs/image/tests/: exercise.rs
crates/packs/math/: Cargo.toml
crates/packs/math/src/: combinatorics.rs  lib.rs  number_factor.rs  number_stats.rs  percent.rs
crates/packs/text/: Cargo.toml
crates/packs/text/src/: base64_tools.rs  binary.rs  case_convert.rs  diff.rs  doc_merge.rs  gzip.rs  hash.rs  hex.rs  hexdump.rs  html_entities.rs  html_to_text.rs  json.rs  json_pick.rs  json_query.rs  json_shape.rs  jwt.rs  lib.rs  lorem.rs  number_base.rs  slugify.rs  sort_lines.rs  text_slice.rs  text_stats.rs  text_uniq.rs  unicode_escape.rs  url.rs
crates/packs/text/tests/: exercise.rs
docs/: adding-a-chain.md  adding-a-tool.md  architecture.md  concepts.md  mcp.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chain.rs  crypto.rs  data.rs  image.rs  text.rs
fuzz/seeds/chain/: jwt-pretty.json  pipe-syntax
fuzz/seeds/image/: compress-bmp  convert-jpeg  convert-png  qr-decode-png  resize-png
pages/tool/: [toolName].tsx
scripts/: build-web-assets.sh  install.ps1  install.sh  update-packaging.py  update-packaging.sh  update.sh
supply-chain/: audits.toml  config.toml
tests/: abi.test.mjs  browser.test.mjs
tools/: invalid-argument-error.ts  processing-error.ts  tool-manifest.ts  tool.ts
tools/base64-decoder/: index.ts
tools/compressor/: index.ts  package-lock.json  package.json
tools/url-decoder/: index.ts
web/: index.html  package-lock.json  package.json  playwright.config.mjs  vite.config.js
web/public/: manifest.webmanifest  sw.js
web/public/chains/: image-web-ready.json  index.json
web/src/: App.svelte  app.css  main.js
web/src/components/: CliCommand.svelte  OptionsForm.svelte  ValueInput.svelte  ValueOutput.svelte
web/src/lib/: catalog.js  dagRun.js  streamSave.js  wasm.js
web/src/pages/: Builder.svelte  Chains.svelte  Cli.svelte  Home.svelte  Tool.svelte  Trust.svelte
web/tests/: e2e.spec.mjs
