[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/packs/text",
    "crates/packs/image",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/koundinyagoparaju/toolkit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Small wasm binaries for the packs; speed is still fine for interactive use.
[profile.release]
opt-level = "s"
lto = true
strip = true
