[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/packs/text",
    "crates/packs/image",
    "crates/packs/crypto",
    "crates/packs/data",
    "crates/cli",
]

[workspace.package]
version = "0.17.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/koundinyagoparaju/toolkit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Small wasm binaries for the packs; speed is still fine for interactive use.
[profile.release]
opt-level = "s"
lto = true
strip = true
