[package]
name = "toolkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "toolkit"
path = "src/main.rs"

[dependencies]
toolkit-core = { path = "../core" }
toolkit-pack-text = { path = "../packs/text" }
toolkit-pack-image = { path = "../packs/image" }
toolkit-pack-crypto = { path = "../packs/crypto" }
toolkit-pack-data = { path = "../packs/data" }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
