[package]
name = "toolkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "toolkit"
path = "src/main.rs"

[dependencies]
toolkit-core = { path = "../core" }
toolkit-pack-text = { path = "../packs/text" }
toolkit-pack-image = { path = "../packs/image" }
toolkit-pack-crypto = { path = "../packs/crypto" }
toolkit-pack-data = { path = "../packs/data" }
toolkit-pack-math = { path = "../packs/math" }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "string"] }
getrandom = "0.4"
base64 = "0.22"
clap_complete = "4.6.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
