[package]
name = "toolkit-pack-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
toolkit-core = { path = "../../core" }
serde_json = { workspace = true }
hmac = "0.13"
sha2 = "0.11"
data-encoding = "2"
bs58 = "0.5"
